@@ -1,5 +1,5 @@
 semantics are perl5. perl5 is the semantics. perl5 is semantics. the semantics are perl5. the semantics is perl5.
-version is 0.001_003.
+version is 0.001_004.
 
 start symbol is S.
 
