@@ -1,4 +1,4 @@
-semantics are perl5.  version is 0.001_003.
+semantics are perl5.  version is 0.001_004.
 
 start symbol is E.
 
