@@ -15,7 +15,7 @@ my $value = Marpa::mdl(
 say ${$value};
 
 __DATA__
-semantics are perl5.  version is 0.001_003.  start symbol is Expression.
+semantics are perl5.  version is 0.001_004.  start symbol is Expression.
 
 Expression: Expression, /[*]/, Expression.  priority 200.  q{
     $_[0] * $_[2]
