@@ -1447,7 +1447,7 @@ is_file($_, 'example/equation.marpa');
 =end Marpa::Test::Display:
 
 
-    semantics are perl5.  version is 0.001_003.
+    semantics are perl5.  version is 0.001_004.
 
     start symbol is E.
 
