@@ -8,7 +8,7 @@ use lib 'lib';
 use lib 't/lib';
 use English qw( -no_match_vars );
 use Fatal qw(open close chdir);
-use Test::More tests => 24;
+use Test::More tests => 4;
 use Carp;
 use Marpa::Test;
 
@@ -22,19 +22,10 @@ chdir $example_dir;
 my @expected_values = split /\n/xms, <<'EOS';
 a
 A(B(a))
-A(B(A(B(a))))
-A(B(A(B(A(B(a))))))
-A(B(A(B(A(B(A(B(a))))))))
-A(B(A(B(A(B(A(B(A(B(a))))))))))
-A(B(A(B(A(B(A(B(A(B(A(B(a))))))))))))
-A(B(A(B(A(B(A(B(A(B(A(B(A(B(a))))))))))))))
-A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(a))))))))))))))))
-A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(a))))))))))))))))))
-A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(A(B(a))))))))))))))))))))
 EOS
 
 my $mdl = <<'EOF';
-semantics are perl5.  version is 0.001_003.
+semantics are perl5.  version is 0.001_004.
 start symbol is S.
 default action is q{join(q{ }, @_)}.
 
@@ -75,20 +66,16 @@ if ( $fail_location >= 0 ) {
 }
 $recce->end_input();
 
-for my $depth ( 1, 2, 5, 10 ) {
-
-    my $evaler =
-        new Marpa::Evaluator( { recce => $recce, cycle_depth => $depth } );
-    my $parse_count = 0;
-    while ( my $value = $evaler->value() ) {
-        Marpa::Test::is(
-            ${$value},
-            $expected_values[ $parse_count++ ],
-            'cycle depth test'
-        );
-    } ## end while ( my $value = $evaler->value() )
-
-} ## end for my $depth ( 1, 2, 5, 10 )
+my $evaler = new Marpa::Evaluator( { recce => $recce } );
+my $parse_count = 0;
+while ( my $value = $evaler->value() ) {
+    Marpa::Test::is(
+        ${$value},
+        $expected_values[$parse_count],
+        "cycle depth test $parse_count"
+    );
+    $parse_count++;
+} ## end while ( my $value = $evaler->value() )
 
 # Local Variables:
 #   mode: cperl
