@@ -1,6 +1,7 @@
 Revision history for Marpa
 
+Marpa is a fork from Parse::Marpa.  It is experimental and alpha.
+
 0.001_nnn Mon Mar  9 10:00:40 PDT 2009
 
-Forked this version from Parse::Marpa.
-This new, experimental, version is alpha.
+A (probably long) series of developer's releases.
